skins/oasis/css/core/_Footer.scss
.WikiaFooter {
	clear: both;
	padding-top: 23px;
	position: relative;
	z-index: $zTop; 	// IE fix
	.toolbar {
		@include linear-gradient($color-header, left, $color-header-alt, 0, $color-header, 50%, $color-header-alt, 100%);
		border-top: 3px solid #000;
		color: $color-header-text;
		height: 20px;
		margin-left: -5px;
		position: absolute;
		top: 0;
		width: $width-outside + 10px;
		&:after {
			background: url(/skins/oasis/images/sprite.png) 0 -32px no-repeat; /* $wgCdnStylePath */
			content: " ";
			height: 12px;
			left: 5px;
			position: absolute;
			top: 20px;
			width: 1000px;
		}
		&.float {
			bottom: 0;
			position: fixed;
			top: auto;
		}
		&.small {
			left: -5px;
			margin-left: auto;
		}
		img {
			float: left;
			margin-right: 5px;
			vertical-align: middle;
		}
		.tools {
			@include clearfix;
			background-image: url(/skins/oasis/images/checkers.png); /* $wgCdnStylePath */
			display: block;
			list-style: none;
			padding: 0 10px;
			z-index: 1000;	/* IE7 */
			>li {
				border-left: 1px solid mix($color-header-text, $color-header, 20%);
				float: left;
				height: 16px;
				line-height: 16px;
				margin-top: 2px;
				padding: 0 10px;
				&:first-child {
					border: 0;
				}
				img {
					margin: 0 6px 0 1px;
				}
				>a {
					color: $color-header-text;
				}
				>span {
					color: mix($color-header-text,gray,50%);
				}
			}
			img {
				cursor: pointer;
			}
			.arrow-icon-ctr {
				position: relative;
				display: inline-block;
				zoom: 1; // IE
				width: 15px;
				height: 12px;
			}
			.arrow-icon {
				position: absolute;
				width: 0;
				height: 0;
				border: 4px solid transparent;
				border-bottom-color: $color-header-text;
			}
			.arrow-icon-single {
				top: 2px;
				left: 0;
			}
			.arrow-icon-top {
				top: 0;
				left: 0;
			}
			.arrow-icon-bottom {
				top: 4px;
				left: 0;
			}
			.gear-icon {
				background-image: url(/skins/oasis/images/icon_gear.png); /* $wgCdnStylePath */
				height: 16px;
				width: 16px;
			}
		}
	}
	.tools-menu {
		@include menu-heavy;
		border-width: 4px 4px 2px;
		bottom: 22px;
		min-width: 120px;
		right: 0;
		z-index: 1000;	/* Footer Ad: 999 */
		span {
			color: mix($color-text, $color-page);
			display: block;
			padding: 5px;
		}
	}
	h1 {
		font-size: 18px;
		left: 36px;
		position: absolute;
		top: 40px;
	}
	.wikia-button {
		position: absolute;
		right: 36px;
		top: 40px;
	}
	section >ul {
		@include clearfix;
		@include linear-gradient(false, top, rgba($color-module-shadow, 0), 50%, $color-module-shadow, 100%);
		border-bottom: 1px solid $color-page-border;
		border-left: 1px solid $color-page-border;
		border-right: 1px solid $color-page-border;
		list-style: none;
		margin: 0 15px;
		padding: 45px 20px 20px;
		text-align: center;
		.item-1 {
			float: left;
		}
		.item-2 {
			float: right;
		}
	}
	.banner-corner-left {
		border-color: transparent #000 #000 transparent;
		left: 0;
		top: -7px;
	}
	.banner-corner-right {
		border-color: transparent transparent $color-header $color-header;
		right: -5px;
		top: -7px;
	}
}


.CorporateFooter  {
	@include clearfix;
	clear: both;
	padding-bottom: 10px;
	nav {
		margin-top: 15px;
		>h1 {
			display: none;
		}
	}
	.WikiaHubBranding {
		background: black;
		float: left;
		height: 22px;
		margin-left: 15px;
		padding: 1px;
		.wordmark {
			float: left;
			padding: 0 5px;
			position: relative;
			width: 55px;
			img {
				filter:progid:DXImageTransform.Microsoft.Matrix(Dx=0, Dy=0, M11=0.6, M12=0, M21=0, M22=0.6);
				-moz-transform: matrix(0.6, 0, 0, 0.6, -19px, -5px);
				-webkit-transform: matrix(0.6, 0, 0, 0.6, -19, -5);
				margin-top: 3px;
			}
		}
		.hub {
			background: $color-page;
			float: left;
			height: 12px;
			line-height: 14px;
			padding: 5px;
			a {
				color: $color-text;
			}
		}
	}
	ul {
		float: right;
		list-style: none outside none;
		margin: {
			top: 5px;
			bottom: 10px;
		}
		display: inline-block;
		*width: 1000px; // /** IE 7  **/

		li {
			display: table-cell;
			*float: left;  // /** IE 7  **/
			padding: {
				right: 10px;
				left: 10px;
			}
			border-right: solid 1px $color-links;
			&:last-child {
				border: none;
			}

			a {
				color: $color-links;
			}
		}
	}
}

