Oasis: toolbar shouldn't float when it's docked at the bottom of the skin (and the whole footer shouldn't have the highest z-index, there is another way to fix it for IE)(BugId:3323)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@34529 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/oasis/css/core/_Footer.scss
+++ b/skins/oasis/css/core/_Footer.scss
@@ -2,7 +2,17 @@
 	clear: both;
 	padding-top: 23px;
 	position: relative;
-	z-index: $zTop; 	// IE fix
+	
+	&.float{
+		z-index: $zTop;
+		
+		.toolbar {
+			bottom: 0;
+			position: fixed;
+			top: auto;
+		}
+	}
+	
 	.toolbar {
 		@include linear-gradient($color-header, left, $color-header-alt, 0, $color-header, 50%, $color-header-alt, 100%);
 		border-top: 3px solid #000;
@@ -20,11 +30,6 @@
 			position: absolute;
 			top: 20px;
 			width: 1000px;
-		}
-		&.float {
-			bottom: 0;
-			position: fixed;
-			top: auto;
 		}
 		&.small {
 			left: -5px;
